tests/snapshots/snapshots__fixture_go_version_level2.snap
---
source: tests/snapshots.rs
expression: output
---
CHANGELOG.md
     1→# 1.8.0 (Nov 28, 2025)
    24→# 1.7.0 (May 24, 2024)
    43→# 1.6.0 (June 28, 2022)
    49→# 1.5.0 (May 18, 2022)
    56→# 1.4.0 (January 5, 2022)
    63→# 1.3.0 (March 31, 2021)
    70→# 1.2.1 (June 17, 2020)
    75→# 1.2.0 (April 23, 2019)
    80→# 1.1.0 (Jan 07, 2019)
    85→# 1.0.0 (August 24, 2018)
README.md
     1→# Versioning Library for Go
    13→## Installation and Usage
    24→#### Version Parsing and Comparison
    37→#### Version Constraints
    49→#### Version Sorting
    63→## Issues and Contributing
constraint.go
    14→var (
    15→	constraintRegexp     *regexp.Regexp
    16→	constraintRegexpOnce sync.Once
    19→func getConstraintRegexp() *regexp.Regexp {
    33→type Constraint struct {
    40→func (c *Constraint) Equals(con *Constraint) bool {
    46→type Constraints []*Constraint
    48→type constraintFunc func(v, c *Version) bool
    50→type constraintOperation struct {
    58→func NewConstraint(v string) (Constraints, error) {
    75→func MustConstraints(c Constraints, err error) Constraints {
    84→func (cs Constraints) Check(v *Version) bool {
   102→func (cs Constraints) Equals(c Constraints) bool {
   125→func (cs Constraints) Len() int {
   129→func (cs Constraints) Less(i, j int) bool {
   140→func (cs Constraints) Swap(i, j int) {
   145→func (cs Constraints) String() string {
   155→func (c *Constraint) Check(v *Version) bool {
   161→func (c *Constraint) Prerelease() bool {
   165→func (c *Constraint) String() string {
   169→func parseSingle(v string) (*Constraint, error) {
   208→func prereleaseCheck(v, c *Version) bool {
   232→type operator rune
   234→const (
   235→	equal            operator = '='
   236→	notEqual         operator = '≠'
   237→	greaterThan      operator = '>'
   238→	lessThan         operator = '<'
   239→	greaterThanEqual operator = '≥'
   240→	lessThanEqual    operator = '≤'
   241→	pessimistic      operator = '~'
   244→func constraintEqual(v, c *Version) bool {
   248→func constraintNotEqual(v, c *Version) bool {
   252→func constraintGreaterThan(v, c *Version) bool {
   256→func constraintLessThan(v, c *Version) bool {
   260→func constraintGreaterThanEqual(v, c *Version) bool {
   264→func constraintLessThanEqual(v, c *Version) bool {
   268→func constraintPessimistic(v, c *Version) bool {
version.go
    16→var (
    17→	versionRegexp     *regexp.Regexp
    18→	versionRegexpOnce sync.Once
    19→	semverRegexp      *regexp.Regexp
    20→	semverRegexpOnce  sync.Once
    23→func getVersionRegexp() *regexp.Regexp {
    30→func getSemverRegexp() *regexp.Regexp {
    39→const (
    40→	VersionRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    46→	SemverRegexpRaw string = `v?([0-9]+(\.[0-9]+)*?)` +
    53→type Version struct {
    63→func NewVersion(v string) (*Version, error) {
    70→func NewSemver(v string) (*Version, error) {
    74→func newVersion(v string, pattern *regexp.Regexp) (*Version, error) {
   114→func Must(v *Version, err error) *Version {
   128→func (v *Version) Compare(other *Version) int {
   196→func (v *Version) equalSegments(other *Version) bool {
   211→func allZero(segs []int64) bool {
   220→func comparePart(preSelf string, preOther string) int {
   267→func comparePrereleases(v string, other string) int {
   309→func (v *Version) Core() *Version {
   316→func (v *Version) Equal(o *Version) bool {
   325→func (v *Version) GreaterThan(o *Version) bool {
   330→func (v *Version) GreaterThanOrEqual(o *Version) bool {
   335→func (v *Version) LessThan(o *Version) bool {
   340→func (v *Version) LessThanOrEqual(o *Version) bool {
   349→func (v *Version) Metadata() string {
   359→func (v *Version) Prerelease() string {
   368→func (v *Version) Segments() []int {
   381→func (v *Version) Segments64() []int64 {
   395→func (v *Version) String() string {
   399→func (v *Version) bytes() []byte {
   423→func (v *Version) Original() string {
   428→func (v *Version) UnmarshalText(b []byte) error {
   440→func (v *Version) MarshalText() ([]byte, error) {
   445→func (v *Version) Scan(src interface{}) error {
   457→func (v *Version) Value() (driver.Value, error) {
version_collection.go
     8→type Collection []*Version
    10→func (v Collection) Len() int {
    14→func (v Collection) Less(i, j int) bool {
    18→func (v Collection) Swap(i, j int) {
